[package]
name = "three"
version = "0.2.0"
authors = ["Dzmitry Malyshau <kvarkus@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Three.js inspired 3D engine in Rust"
categories = ["graphics", "game-engines"]
keywords = ["gamedev", "graphics", "engine", "3D"]
homepage = "https://github.com/three-rs/three"
repository = "https://github.com/three-rs/three"
documentation = "https://docs.rs/three/"
build = "build.rs"
include = ["./data/"]
exclude = ["doc", "bors.toml", ".travis.yml", "test_data"]

[lib]

[profile.release]
debug = true

[features]
default = ["opengl"]
"opengl" = ["gfx_device_gl", "gfx_window_glutin", "glutin"]

[build-dependencies]
includedir_codegen = "0.2.0"

[dependencies]
bitflags = "0.9"
cgmath = { version = "0.15", features = ["mint"] }
derivative = "1.0"
froggy = "0.4.4"
genmesh = "0.5"
gfx = "0.16.3"
gfx_glyph = "0.7"
gltf = { features = ["names"], version = "0.9.2" }
gltf-importer = { features = ["names"], version = "0.9.2" }
gltf-utils = { features = ["names"], version = "0.9.2" }
image = "0.13"
includedir = "0.2.0"
itertools = "0.6"
log = "0.3"
obj = { version = "0.6", features = ["genmesh"] }
phf = "0.7.12"
quick-error = "1.2.1"
rodio = "0.5"
mint = "0.4.2"
vec_map = "0.8"
# OpenGL
gfx_device_gl = { version = "0.14", optional = true }
gfx_window_glutin = { version = "0.17", optional = true }
glutin = { version = "0.9", optional = true }

[dev-dependencies]
env_logger = "0.4"
notify = "4.0.1"
rand = "0.3"

[[example]]
name = "lights"

[[example]]
name = "materials"

[[example]]
name = "mesh-update"

[[example]]
name = "obj"

[[example]]
name = "reload"

[[example]]
name = "shapes"

[[example]]
name = "sprite"

[[example]]
name = "tutorial"

[[example]]
name = "gltf"

[[example]]
name = "gltf-animation"

[[example]]
name = "group"

[[example]]
name = "anim"

[[example]]
name = "aviator"
path = "examples/aviator/main.rs"
