[package]
name = "three"
version = "0.3.0"
authors = ["Three-rs Developers"]
license = "MIT/Apache-2.0"
description = "Three.js inspired 3D engine in Rust"
categories = ["graphics", "game-engines"]
keywords = ["gamedev", "graphics", "engine", "3D"]
homepage = "https://github.com/three-rs/three"
repository = "https://github.com/three-rs/three"
documentation = "https://docs.rs/three/"
build = "build.rs"
include = ["./data/"]
exclude = ["doc", "bors.toml", ".travis.yml", "test_data"]

[lib]

[features]
default = ["opengl"]
gltf-loader = ["gltf", "gltf-importer", "gltf-utils"]
opengl = ["gfx_device_gl", "gfx_window_glutin", "glutin"]

[build-dependencies]
includedir_codegen = "0.2.0"

[dependencies]
arrayvec = "0.4"
bitflags = "1"
cgmath = { version = "0.15", features = ["mint"] }
derivative = "1.0"
froggy = "0.4.4"
genmesh = "0.5"
gfx = "0.17.1"
gfx_glyph = "0.8"
gltf = { features = ["names"], optional = true, version = "0.9.3" }
gltf-importer = { features = ["names"], optional = true, version = "0.9.3" }
gltf-utils = { features = ["names"], optional = true, version = "0.9.3" }
image = "0.18"
includedir = "0.2"
itertools = "0.7"
log = "0.4"
obj = { version = "0.8.1", features = ["genmesh"] }
phf = "0.7.12"
quick-error = "1.2"
rodio = "0.5"
mint = "0.5"
vec_map = "0.8"

# OpenGL
gfx_device_gl = { version = "0.15", optional = true }
gfx_window_glutin = { version = "0.20", optional = true }
glutin = { version = "0.12", optional = true }

[dev-dependencies]
env_logger = "0.5"
notify = "4"
rand = "0.3"

[[example]]
name = "lights"

[[example]]
name = "materials"

[[example]]
name = "mesh-update"

[[example]]
name = "obj"

[[example]]
name = "reload"

[[example]]
name = "shapes"

[[example]]
name = "sprite"

[[example]]
name = "tutorial"

[[example]]
name = "group"

[[example]]
name = "anim"

[[example]]
name = "aviator"
path = "examples/aviator/main.rs"

[[example]]
name = "gltf-pbr-shader"
required-features = ["gltf-loader"]

[[example]]
name = "gltf-node-animation"
required-features = ["gltf-loader"]

[[example]]
name = "gltf-vertex-skinning"
required-features = ["gltf-loader"]

[[example]]
name = "gltf-morph-targets"
required-features = ["gltf-loader"]
